syntax = "proto3";
package product;
option go_package = "github.com/Bielik20/grpc-playground/gen/go";

message GetProductRequest {
  string product_id = 1;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (Product);
}
